--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -54,6 +54,10 @@
     background-color: var(--color-primary-base);
 }
 
+.contact-section .info .socials a:active {
+    background-color: var(--color-primary-lightest);
+}
+
 .contact-section .info .socials a:hover .social-text {
     color: var(--color-text-primary);
 }
@@ -107,6 +111,10 @@
     color: var(--color-text-primary);
 }
 
+.contact-section .form button:active {
+    background-color: var(--color-secondary-lightest);
+}
+
 .socials img {
     width: 30px;
     height: 30px;
@@ -116,15 +124,11 @@
     background-color: var(--color-primary-base);
 }
 
-@media (max-width: 900px) {
-
-    #main {
-        padding: var(--spacing-md);
-    }
+@media (max-width: 850px) {
 
     /* SECTION 4: CONTACT */
     .contact-section {
-        margin: var(--spacing-4xl) var(--spacing-sm);
+        margin: var(--spacing-4xl) 0;
     }
 }
 
